--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fafeecdb",
+   "id": "67d5b096",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bbb91cdc",
+   "id": "4ae1d3cc",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62555895",
+   "id": "a4a6ca2a",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "228cc247",
+   "id": "dace3f93",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9d04bbd",
+   "id": "335388e3",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8482a7c8",
+   "id": "4b3817e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "edf616af",
+   "id": "8137be16",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c5ad4ae5",
+   "id": "79804769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "d8da5a44",
+   "id": "ac23a66e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3e0fb01e",
+   "id": "0adef6ce",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "039fd971",
+   "id": "422799bc",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d02d020",
+   "id": "ed499b7d",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d87fc540",
+   "id": "b639e381",
    "metadata": {},
    "outputs": [
     {
@@ -396,37 +396,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "00146084",
+   "execution_count": 111,
+   "id": "9a17745f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7b4afd0> rouge auto clio\n",
-      "<__main__.Voiture object at 0x7fbab7b4afd0> rouge auto megane\n"
+      "rouge auto clio\n",
+      "rouge auto megane\n"
      ]
     }
    ],
    "source": [
     "class Voiture:\n",
-    "    def __init__(self, couleur, type_de_boite, modele_de_la_voiture):\n",
+    "    def __init__(self, couleur, modele_de_la_voiture, type_de_boite=\"auto\"):\n",
     "        self.modele = modele_de_la_voiture\n",
     "        self.boite = type_de_boite\n",
     "        self.couleur = couleur\n",
     "        \n",
-    "voiture1 = Voiture(type_de_boite=\"auto\", couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
-    "print(voiture1, voiture1.couleur, voiture1.boite, voiture1.modele)\n",
+    "voiture1 = Voiture(couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
+    "print(voiture1.couleur, voiture1.boite, voiture1.modele)\n",
     "\n",
-    "voiture2 = Voiture(\"bleu\", \"manuelle\", \"megane\")\n",
-    "print(voiture1, voiture1.couleur, voiture1.boite, voiture2.modele)"
+    "voiture2 = Voiture(\"bleu\", \"megane\",  \"manuelle\")\n",
+    "print(voiture1.couleur, voiture1.boite, voiture2.modele)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "a7454ea2",
+   "execution_count": 112,
+   "id": "882744df",
    "metadata": {
     "scrolled": false
    },
@@ -444,7 +444,7 @@
        "[('boite', 'auto'), ('couleur', 'rouge')]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "958bc7c9",
+   "id": "e47e9658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "cbd8b5e6",
+   "id": "a9bfb333",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7eaf9db2",
+   "id": "df809e4e",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b063735b",
+   "id": "e20d3ef8",
    "metadata": {},
    "outputs": [],
    "source": []
