--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "67d5b096",
+   "id": "238a8df0",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4ae1d3cc",
+   "id": "467e5cbf",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4a6ca2a",
+   "id": "de0ff12e",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dace3f93",
+   "id": "b9b4ceef",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "335388e3",
+   "id": "56947261",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4b3817e6",
+   "id": "6b80f713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8137be16",
+   "id": "cb1bca4d",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "79804769",
+   "id": "df62d8b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ac23a66e",
+   "id": "fab927ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0adef6ce",
+   "id": "6f335a85",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "422799bc",
+   "id": "9ff8c096",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed499b7d",
+   "id": "d4970b03",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b639e381",
+   "id": "759bd4ab",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "9a17745f",
+   "id": "63fb8f06",
    "metadata": {},
    "outputs": [
     {
@@ -412,21 +412,23 @@
    "source": [
     "class Voiture:\n",
     "    def __init__(self, couleur, modele_de_la_voiture, type_de_boite=\"auto\"):\n",
+    "        print(self)\n",
     "        self.modele = modele_de_la_voiture\n",
     "        self.boite = type_de_boite\n",
     "        self.couleur = couleur\n",
     "        \n",
     "voiture1 = Voiture(couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
-    "print(voiture1.couleur, voiture1.boite, voiture1.modele)\n",
+    "#print(voiture1.couleur, voiture1.boite, voiture1.modele)\n",
     "\n",
     "voiture2 = Voiture(\"bleu\", \"megane\",  \"manuelle\")\n",
-    "print(voiture1.couleur, voiture1.boite, voiture2.modele)"
+    "print(voiture)\n",
+    "#print(voiture1.couleur, voiture1.boite, voiture2.modele)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "882744df",
+   "id": "c75bf456",
    "metadata": {
     "scrolled": false
    },
@@ -462,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "e47e9658",
+   "id": "6a661c65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "a9bfb333",
+   "id": "056b827d",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "df809e4e",
+   "id": "8d29e3de",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e20d3ef8",
+   "id": "75af49be",
    "metadata": {},
    "outputs": [],
    "source": []
