--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "238a8df0",
+   "id": "fe87cb30",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "467e5cbf",
+   "id": "79d5a21e",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de0ff12e",
+   "id": "de6f8ee7",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b9b4ceef",
+   "id": "cbeb3f54",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56947261",
+   "id": "efd237ba",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6b80f713",
+   "id": "bfb95586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "cb1bca4d",
+   "id": "eb0b4734",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "df62d8b6",
+   "id": "aaa9068b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "fab927ab",
+   "id": "f966d0e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6f335a85",
+   "id": "a2dd59f6",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9ff8c096",
+   "id": "05cb5f75",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4970b03",
+   "id": "7d9edb7b",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "759bd4ab",
+   "id": "9af9cd59",
    "metadata": {},
    "outputs": [
     {
@@ -396,16 +396,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "63fb8f06",
+   "execution_count": 113,
+   "id": "86cf4174",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rouge auto clio\n",
-      "rouge auto megane\n"
+      "<__main__.Voiture object at 0x7fbab7b4a610>\n",
+      "<__main__.Voiture object at 0x7fbab7b4a610>\n",
+      "########\n",
+      "<__main__.Voiture object at 0x7fbab7b57610>\n",
+      "<__main__.Voiture object at 0x7fbab7b57610>\n"
      ]
     }
    ],
@@ -418,17 +421,18 @@
     "        self.couleur = couleur\n",
     "        \n",
     "voiture1 = Voiture(couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
+    "print(voiture1)\n",
     "#print(voiture1.couleur, voiture1.boite, voiture1.modele)\n",
-    "\n",
+    "print(\"########\")\n",
     "voiture2 = Voiture(\"bleu\", \"megane\",  \"manuelle\")\n",
-    "print(voiture)\n",
+    "print(voiture2)\n",
     "#print(voiture1.couleur, voiture1.boite, voiture2.modele)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "c75bf456",
+   "id": "9cc9d848",
    "metadata": {
     "scrolled": false
    },
@@ -464,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "6a661c65",
+   "id": "055271a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "056b827d",
+   "id": "b66b1971",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "8d29e3de",
+   "id": "feaea8c7",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75af49be",
+   "id": "dc61b8e3",
    "metadata": {},
    "outputs": [],
    "source": []
