--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fe87cb30",
+   "id": "dbd09073",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "79d5a21e",
+   "id": "0d384d1e",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de6f8ee7",
+   "id": "4436a5af",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cbeb3f54",
+   "id": "d951326b",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd237ba",
+   "id": "636a94a5",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bfb95586",
+   "id": "a4ccb0dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "eb0b4734",
+   "id": "fccab3ef",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "aaa9068b",
+   "id": "aec96615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f966d0e3",
+   "id": "4e877978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a2dd59f6",
+   "id": "14899d05",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "05cb5f75",
+   "id": "0c88ea01",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9edb7b",
+   "id": "36da6677",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9af9cd59",
+   "id": "8899afff",
    "metadata": {},
    "outputs": [
     {
@@ -396,19 +396,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "86cf4174",
+   "execution_count": 116,
+   "id": "2093ccb8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7b4a610>\n",
-      "<__main__.Voiture object at 0x7fbab7b4a610>\n",
+      "<__main__.Voiture object at 0x7fbab7c40640>\n",
+      "<__main__.Voiture object at 0x7fbab7c40640>\n",
+      "<__main__.Voiture object at 0x7fbab7c40640>\n",
+      "vroum\n",
       "########\n",
-      "<__main__.Voiture object at 0x7fbab7b57610>\n",
-      "<__main__.Voiture object at 0x7fbab7b57610>\n"
+      "<__main__.Voiture object at 0x7fbab787c4f0>\n",
+      "<__main__.Voiture object at 0x7fbab787c4f0>\n"
      ]
     }
    ],
@@ -419,9 +421,14 @@
     "        self.modele = modele_de_la_voiture\n",
     "        self.boite = type_de_boite\n",
     "        self.couleur = couleur\n",
+    "    \n",
+    "    def demarrer(self):\n",
+    "        print(self)\n",
+    "        print(\"vroum\")\n",
     "        \n",
     "voiture1 = Voiture(couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
     "print(voiture1)\n",
+    "voiture1.demarrer()\n",
     "#print(voiture1.couleur, voiture1.boite, voiture1.modele)\n",
     "print(\"########\")\n",
     "voiture2 = Voiture(\"bleu\", \"megane\",  \"manuelle\")\n",
@@ -432,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "9cc9d848",
+   "id": "60e44fab",
    "metadata": {
     "scrolled": false
    },
@@ -468,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "055271a3",
+   "id": "c76acd61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "b66b1971",
+   "id": "4f4733a4",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "feaea8c7",
+   "id": "7147cd67",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc61b8e3",
+   "id": "0e43a6fd",
    "metadata": {},
    "outputs": [],
    "source": []
