--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dbd09073",
+   "id": "887dbf54",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0d384d1e",
+   "id": "93846f34",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4436a5af",
+   "id": "a37d664f",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d951326b",
+   "id": "0ab5f139",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "636a94a5",
+   "id": "8448ac33",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "a4ccb0dc",
+   "id": "590086be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "fccab3ef",
+   "id": "a3cc53ec",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "aec96615",
+   "id": "7ea6bdbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4e877978",
+   "id": "c5a839d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "14899d05",
+   "id": "bf0d2396",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0c88ea01",
+   "id": "44080bf8",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36da6677",
+   "id": "937aac2c",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "8899afff",
+   "id": "9d4f524c",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "2093ccb8",
+   "id": "62ad9ab4",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,9 @@
     "        \n",
     "voiture1 = Voiture(couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
     "print(voiture1)\n",
-    "voiture1.demarrer()\n",
+    "voiture1.demarrer()  \n",
+    "## Voiture.demarrer(voiture1)\n",
+    "\n",
     "#print(voiture1.couleur, voiture1.boite, voiture1.modele)\n",
     "print(\"########\")\n",
     "voiture2 = Voiture(\"bleu\", \"megane\",  \"manuelle\")\n",
@@ -439,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "60e44fab",
+   "id": "37fe5ba9",
    "metadata": {
     "scrolled": false
    },
@@ -475,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "c76acd61",
+   "id": "094456f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "4f4733a4",
+   "id": "1583cae0",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7147cd67",
+   "id": "033a970b",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e43a6fd",
+   "id": "f0110e3b",
    "metadata": {},
    "outputs": [],
    "source": []
