--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "887dbf54",
+   "id": "bc835630",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "93846f34",
+   "id": "2dd1893b",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37d664f",
+   "id": "b0e8da6a",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0ab5f139",
+   "id": "805a71f4",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8448ac33",
+   "id": "4dd1554a",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "590086be",
+   "id": "9b5e049d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a3cc53ec",
+   "id": "e3d43ae9",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "7ea6bdbd",
+   "id": "617076ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "c5a839d0",
+   "id": "dd538f67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "bf0d2396",
+   "id": "4a22e9a1",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "44080bf8",
+   "id": "43c5bc05",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "937aac2c",
+   "id": "8d73af05",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "9d4f524c",
+   "id": "20a31c71",
    "metadata": {},
    "outputs": [
     {
@@ -396,21 +396,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "62ad9ab4",
+   "execution_count": 119,
+   "id": "6f5cbce9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7c40640>\n",
-      "<__main__.Voiture object at 0x7fbab7c40640>\n",
-      "<__main__.Voiture object at 0x7fbab7c40640>\n",
+      "<__main__.Voiture object at 0x7fbab7c460d0>\n",
+      "<__main__.Voiture object at 0x7fbab7c460d0>\n",
+      "<__main__.Voiture object at 0x7fbab7c460d0>\n",
       "vroum\n",
       "########\n",
-      "<__main__.Voiture object at 0x7fbab787c4f0>\n",
-      "<__main__.Voiture object at 0x7fbab787c4f0>\n"
+      "<__main__.Voiture object at 0x7fbab7c46b80>\n",
+      "<__main__.Voiture object at 0x7fbab7c46b80>\n",
+      "True\n"
      ]
     }
    ],
@@ -425,6 +426,7 @@
     "    def demarrer(self):\n",
     "        print(self)\n",
     "        print(\"vroum\")\n",
+    "        self.est_demarree = True\n",
     "        \n",
     "voiture1 = Voiture(couleur=\"rouge\", modele_de_la_voiture=\"clio\")\n",
     "print(voiture1)\n",
@@ -435,13 +437,15 @@
     "print(\"########\")\n",
     "voiture2 = Voiture(\"bleu\", \"megane\",  \"manuelle\")\n",
     "print(voiture2)\n",
-    "#print(voiture1.couleur, voiture1.boite, voiture2.modele)"
+    "#print(voiture1.couleur, voiture1.boite, voiture2.modele)\n",
+    "\n",
+    "print(voiture1.est_demarree)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "37fe5ba9",
+   "id": "88b9df0c",
    "metadata": {
     "scrolled": false
    },
@@ -477,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "094456f3",
+   "id": "fb4eb2e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "1583cae0",
+   "id": "ba9619ba",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "033a970b",
+   "id": "81b03457",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0110e3b",
+   "id": "45c60833",
    "metadata": {},
    "outputs": [],
    "source": []
