--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bc835630",
+   "id": "bba9702f",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2dd1893b",
+   "id": "8f2161da",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0e8da6a",
+   "id": "896eac73",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "805a71f4",
+   "id": "773aedcf",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dd1554a",
+   "id": "3eb3ac48",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9b5e049d",
+   "id": "c2d10916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e3d43ae9",
+   "id": "5139bc30",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "617076ec",
+   "id": "6329ec58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "dd538f67",
+   "id": "951924ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4a22e9a1",
+   "id": "762d6acd",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "43c5bc05",
+   "id": "225d2d8a",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d73af05",
+   "id": "2ab93217",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "20a31c71",
+   "id": "f1718da3",
    "metadata": {},
    "outputs": [
     {
@@ -396,22 +396,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "6f5cbce9",
+   "execution_count": 120,
+   "id": "df60f0a0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7c460d0>\n",
-      "<__main__.Voiture object at 0x7fbab7c460d0>\n",
-      "<__main__.Voiture object at 0x7fbab7c460d0>\n",
+      "<__main__.Voiture object at 0x7fbab7b65b80>\n",
+      "<__main__.Voiture object at 0x7fbab7b65b80>\n",
+      "<__main__.Voiture object at 0x7fbab7b65b80>\n",
       "vroum\n",
       "########\n",
-      "<__main__.Voiture object at 0x7fbab7c46b80>\n",
-      "<__main__.Voiture object at 0x7fbab7c46b80>\n",
-      "True\n"
+      "<__main__.Voiture object at 0x7fbab7b651c0>\n",
+      "<__main__.Voiture object at 0x7fbab7b651c0>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Voiture' object has no attribute 'est_demarree'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [120], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(voiture2)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m#print(voiture1.couleur, voiture1.boite, voiture2.modele)\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28mprint\u001b[39m(voiture1\u001b[38;5;241m.\u001b[39mest_demarree, voiture2\u001b[38;5;241m.\u001b[39mest_demarree)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Voiture' object has no attribute 'est_demarree'"
      ]
     }
    ],
@@ -422,6 +432,7 @@
     "        self.modele = modele_de_la_voiture\n",
     "        self.boite = type_de_boite\n",
     "        self.couleur = couleur\n",
+    "        self.est_demarree = False\n",
     "    \n",
     "    def demarrer(self):\n",
     "        print(self)\n",
@@ -439,13 +450,13 @@
     "print(voiture2)\n",
     "#print(voiture1.couleur, voiture1.boite, voiture2.modele)\n",
     "\n",
-    "print(voiture1.est_demarree)"
+    "print(voiture1.est_demarree, voiture2.est_demarree)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "88b9df0c",
+   "id": "914c29ae",
    "metadata": {
     "scrolled": false
    },
@@ -481,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "fb4eb2e4",
+   "id": "af05f62f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "ba9619ba",
+   "id": "18f5a40a",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "81b03457",
+   "id": "f1dad376",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45c60833",
+   "id": "0f104082",
    "metadata": {},
    "outputs": [],
    "source": []
