--- a/tape_en_cours/Jour 4.ipynb
+++ b/tape_en_cours/Jour 4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bba9702f",
+   "id": "b68d7110",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8f2161da",
+   "id": "a5b67b27",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "896eac73",
+   "id": "1c213280",
    "metadata": {},
    "source": [
     "# CSV"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "773aedcf",
+   "id": "226d1cd1",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eb3ac48",
+   "id": "46d766c7",
    "metadata": {},
    "source": [
     "## Ouverture avec Pandas"
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c2d10916",
+   "id": "b694ea7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5139bc30",
+   "id": "3f00427f",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "6329ec58",
+   "id": "8aea5cff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "951924ea",
+   "id": "0682a474",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "762d6acd",
+   "id": "bed1c7ea",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "225d2d8a",
+   "id": "5dad5f3e",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ab93217",
+   "id": "fbaccf25",
    "metadata": {},
    "source": [
     "# POO"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "f1718da3",
+   "id": "5b9cd7cc",
    "metadata": {},
    "outputs": [
     {
@@ -396,32 +396,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "df60f0a0",
+   "execution_count": 121,
+   "id": "ca95862e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Voiture object at 0x7fbab7b65b80>\n",
-      "<__main__.Voiture object at 0x7fbab7b65b80>\n",
-      "<__main__.Voiture object at 0x7fbab7b65b80>\n",
+      "<__main__.Voiture object at 0x7fbab7c3ecd0>\n",
+      "<__main__.Voiture object at 0x7fbab7c3ecd0>\n",
+      "<__main__.Voiture object at 0x7fbab7c3ecd0>\n",
       "vroum\n",
       "########\n",
-      "<__main__.Voiture object at 0x7fbab7b651c0>\n",
-      "<__main__.Voiture object at 0x7fbab7b651c0>\n"
+      "<__main__.Voiture object at 0x7fbab79d1550>\n",
+      "<__main__.Voiture object at 0x7fbab79d1550>\n",
+      "<__main__.Voiture object at 0x7fbab7c3ecd0>\n",
+      "vroum\n"
      ]
     },
     {
      "ename": "AttributeError",
-     "evalue": "'Voiture' object has no attribute 'est_demarree'",
+     "evalue": "'NoneType' object has no attribute 'est_demarree'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [120], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(voiture2)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m#print(voiture1.couleur, voiture1.boite, voiture2.modele)\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28mprint\u001b[39m(voiture1\u001b[38;5;241m.\u001b[39mest_demarree, voiture2\u001b[38;5;241m.\u001b[39mest_demarree)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Voiture' object has no attribute 'est_demarree'"
+      "Cell \u001b[0;32mIn [121], line 25\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(voiture2)\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m#print(voiture1.couleur, voiture1.boite, voiture2.modele)\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m \u001b[38;5;28mprint\u001b[39m(voiture1\u001b[38;5;241m.\u001b[39mdemarrer()\u001b[38;5;241m.\u001b[39mest_demarree, voiture2\u001b[38;5;241m.\u001b[39mest_demarree)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'est_demarree'"
      ]
     }
    ],
@@ -456,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "914c29ae",
+   "id": "6f13e3e9",
    "metadata": {
     "scrolled": false
    },
@@ -492,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "af05f62f",
+   "id": "3d9db879",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "18f5a40a",
+   "id": "f21d2fb0",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "f1dad376",
+   "id": "08c272bd",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f104082",
+   "id": "eeb4e97a",
    "metadata": {},
    "outputs": [],
    "source": []
